# covasim

./: .gitignore  .nojekyll  .readthedocs.yaml  AGENT_INSTRUCTIONS.md  CHANGELOG.md  CLAUDE.md  CNAME  CODE_OF_CONDUCT.md  MANIFEST.in  NOTES_FOR_CLIFF.md  README.md  README.rst  code_of_conduct.html  contributing.html  contributing.md  data.html  faq.html  faq.md  glossary.html  glossary.md  index.html  objects.inv  objects.json  overview.html  papers.bib  papers.html  parameters.html  pyproject.toml  search.json  setup.py  style.html  style_guide.md  whatsnew.html
api/: analysis.html  base.html  data.loaders.html  defaults.html  immunity.html  index.html  interventions.html  misc.html  parameters.html  people.html  plotting.html  population.html  requirements.html  run.html  settings.html  sim.html  utils.html
covasim/: README.md  __init__.py  _v4.py  analysis.py  connectors.py  covid.py  immunity.py  interventions.py  misc.py  network.py  people.py  population.py  run.py  sim.py  utils.py  version.py
docs/: CNAME  README.md  _quarto.yml  _variables.yml  clean_all  clean_outputs.py  code_of_conduct.md  contributing.md  data.md  faq.md  glossary.md  index.md  migration.md  normalize_notebooks.py  overview.md  papers.md  quarto_utils.py  requirements.txt  style.md  whatsnew.md
examples/: README.md  m8_uq_sweep.py
migration_plan/: MIGRATION_PLAN.md
tests/: README.md  baseline.json  benchmark.json  conftest.py  pytest.ini  requirements_frozen.txt  test_baselines.py  test_covid.py  test_interventions_extra.py  test_m0_parity.py  test_m10_saveload.py  test_m1_parity.py  test_m2_parity.py  test_m3_parity.py  test_m3_variants.py  test_m4_immunity.py  test_m4_parity.py  test_m5_parity.py  test_m5_testing.py  test_m6_parity.py  test_m6_vaccination.py  test_m7_fit.py  test_m8_multisim.py  test_m9_analyzers.py  test_network.py  test_regression.py  test_regression_harness.py  test_sim.py  test_v4_stub.py
tutorials/: index.html  tut_advanced.html  tut_analyzers.html  tut_calibration.html  tut_deployment.html  tut_immunity.html  tut_interventions.html  tut_intro.html  tut_people.html  tut_plotting.html  tut_running.html  (+1 more)
(+61 files in other folders)
